k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nginx
  labels:
    name: webapp-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: webapp-nginx
