k8s/lbroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-nginx
  labels:
    name: webapp-nginx
spec:
  host: webapp.johnbaws.com
  path: "/"
  to:
    kind: Service
    name: webapp-nginx
